# eeg-analysis-adhd-epilepsy

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  get_umap_new_10s.ipynb  get_umap_new_30s.ipynb  pyproject.toml  run.ipynb  run_analysis_patients.ipynb
.mplconfig/: fontlist-v390.json
analysis-design/: analysis_design.py  analysis_exploration.py
cluster/: 01_submit_to_bids.sh  02_tar_raw_data.sh  03_submit_base_cleaning.sh  04_submit_epochs.sh  05_submit_extract_descriptors_array.sh  06_batch_run_dim_reduction.sh  06_submit_merge_descriptors.sh  06_verify_descriptors.sh  07_batch_run_dim_reduction.sh  07_batch_run_dim_reduction_descriptors.sh  07_submit_merge_descriptors.sh  07b_submit_archive_descriptors.sh  08_batch_run_dim_reduction_descriptors.sh  08_submit_foundation_embeddings.sh  08_submit_merge_descriptors.sh  08_tar_scratch_folder.sh  09_submit_align_subject_embeddings.sh  09_submit_classical_decode.sh  09_submit_merge_foundation_embeddings.sh  10_batch_run_dim_reduction.sh  10_submit_foundation_embeddings.sh  10_submit_merge_foundation_embeddings.sh  11_batch_run_dim_reduction.sh  11_batch_run_dim_reduction_descriptors.sh  11_submit_foundation_decode.sh  12_batch_run_dim_reduction_descriptors.sh  12_batch_run_dim_reduction_foundation.sh  13_batch_run_dim_reduction_foundation.sh  13_submit_compare_foundation_dim_reduction.sh  13_submit_foundation_decode.sh  14_submit_classical_decode.sh  14_submit_compare_foundation_dim_reduction.sh  15_submit_classical_decode.sh  15_submit_foundation_decode.sh  16_submit_compare_classical_decode.sh  16_submit_main_dim_reduction.sh  17_submit_foundation_decode.sh  17_submit_main_decoding.sh  18_submit_compare_foundation_decode.sh  19_submit_main_dim_reduction.sh  (+3 more)
cluster/compute_canada/: batch_run_dim_reduction.sh  batch_run_dim_reduction_descriptors.sh  run_neurodags_pipeline.sh  submit_base_cleaning.sh  submit_epochs.sh  submit_extract_descriptors_array.sh  submit_to_bid.sh
configs/: README.md  annotations.yaml  decoding.example.yaml  descriptors.yaml  dim_reduction.example.yaml  dim_reduction_adhd_epilepsy_test.yaml  dim_reduction_descriptors_adhd_epilepsy.yaml  dim_reduction_descriptors_by_family.yaml  dim_reduction_descriptors_by_sensor.yaml  dim_reduction_descriptors_sensor_within_family.yaml  foundation_decoding.example.yaml  foundation_embeddings.example.yaml  foundation_extraction.yaml
configs/analyses/: align_subject_embeddings.yaml
data/: preprocessing.py  to_bids.py
dl_pipelines/: embed.sh  reve_model.py
docs/: BACKLOG.md  IMPROVEMENT_PLAN.md
docs/design/: foundation_models_and_decoding.md  old.md
eeg_adhd_epilepsy/: README.md  __init__.py  run.py
eeg_adhd_epilepsy/analysis/: __init__.py  align_subject_embeddings.py  classical_decoding.py  cohort.py  dataset.py  dimensionality_reduction.py  extract_descriptors.py  extract_foundation_embeddings.py  foundation_decoding.py  merge_descriptors.py  merge_foundation_embeddings.py  utils.py  variance_diagnostics.py  verify_descriptors.py
eeg_adhd_epilepsy/dl/: __init__.py  embed.sh  run_pipeline.sh  temp_loader.py  test_cbramod_shapes.py  test_shape.py
eeg_adhd_epilepsy/explore/: condition_segments_summary.py  eeg_qc.py  features_qc.py  patients_data.py  post_preproc_eeg_qc.py  post_preproc_segment_qc.py  pre_preproc_eeg_qc.py  pre_preproc_segment_qc.py
eeg_adhd_epilepsy/features/: spectral.py
eeg_adhd_epilepsy/io/: __init__.py  analysis.py  bids.py  containers.py  csv.py  descriptor_layout.py  ingest.py  patients.py  readers.py  recording.py  report_paths.py  table.py
eeg_adhd_epilepsy/metadata/: __init__.py  analysis_opportunities_schema.py  cohort.py  patients.py
eeg_adhd_epilepsy/ml/: __init__.py  config_adhd.yml  config_adhd_alldata.yml  config_epilepsy.yml  config_med.yml
eeg_adhd_epilepsy/preproc/: ARTIFACT_STRATEGIES.md  __init__.py  base.py  compare.py  correct.py  denoise.py  dss_utils.py  epochs.py  ica_utils.py  run_all.py  thresholds.py  to_bids.py  utils.py
eeg_adhd_epilepsy/qc/: __init__.py  clean.py  cohort_report.py  conditions.py  descriptor_qc.py  feature_qc.py  metadata.py  metrics.py  patients.py  preproc_qc.py  raw.py  raw_metrics.py  raw_qc.py  recruitment_strategy.py  segmentation.py  utils.py
eeg_adhd_epilepsy/reports/: __init__.py  _common.py  base.py  clean_qc.py  cohort_report.py  compare.py  conditions.py  correct.py  decoding.py  denoise.py  descriptor_qc.py  dim_reduction.py  eeg_report.py  patients.py  preproc_qc.py  qc.py  raw_qc.py
eeg_adhd_epilepsy/signal_quality/: __init__.py  metrics.py  (+2 more)
eeg_adhd_epilepsy_psychostimulant/: __init__.py
ml_pipelines/: config.yml  config_epilepsy.yml  config_med.yml  pipelines.py  run_ml_pipe.py
neurodags_pipelines/: COMPARISON.md  ECOSYSTEM_REPORT.md  GAPS_PLAN.md  MIGRATION_GUIDE.md  QC_PIPELINE_COMPARISON_REPORT.md  SESSION_2026-05-28.md  compare_qc_reports.py  custom_nodes.py  datasets_cleaned.yml  datasets_cleaned_raw.yml  datasets_conditions.yml  datasets_preprocessed.yml  datasets_raw.yml  generate_synthetic.py  nodes_aggregation.py  nodes_annotations.py  nodes_autoreject.py  nodes_bad_channels.py  nodes_denoise.py  nodes_descriptor_qc.py  nodes_ica.py  nodes_preprocessing.py  nodes_qc.py  nodes_spatial.py  nodes_utils.py  step-0_dataset-raw.yml  step-0_datasets_raw.yml  step-0_pipeline-cleaned.yml  step-0_pipeline-raw.yml  step-0_pipeline@preprocessing.yml  step-0_pipeline@qc.yml  step-0_preprocessing.yml  step-0b_preproc_cleaned.yml  step-0c_conditions.yml  step-1_dataset-conditions.yml  step-1_dataset.yml  step-1_datasets_conditions.yml  step-1_features.yml  step-1_features_conditions.yml  step-1_pipeline-basic.yml  (+2 more)
plot/: plot_kmeans.ipynb
scripts/: diagnose_raw_batch.py  diagnose_raw_clusters.py  migrate_decoding_manifest_hashes.py  migrate_descriptor_recording_names.py  split_configs.py
tests/: conftest.py  test_analysis_design.py  test_dim_reduction_inputs.py  test_extract_descriptors.py  test_metadata_builder.py  test_run_orchestrator.py  test_save_embeddings.py
utils/: __init__.py  config.py
viz/: dim_reduction.py  embeddings.py
(+294 files in other folders)
