[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-analysis-adhd-epilepsy"
version = "0.1.0"
description = "EEG analysis, ML/DL pipelines, and visualization for ADHD/Epilepsy psychostimulant study."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  { name = "Hamza Abdelhedi" }
]
keywords = ["EEG", "ADHD", "Epilepsy", "psychostimulant", "machine-learning", "deep-learning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "pandas",
  "mne",
  "mne-bids",
  "torch",
  "tqdm",
  "scikit-learn",
  "umap-learn",
]

[project.urls]
Homepage = "https://github.com/"

[project.scripts]
eeg-embeddings = "eeg_analysis_adhd_epilepsy.dl.reve_model:main"
eeg-dim-reduce = "eeg_analysis_adhd_epilepsy.viz.dim_reduction:main"
eeg-analysis-explore = "eeg_analysis_adhd_epilepsy.explore.analysis_exploration:main"
eeg-ml-run = "eeg_analysis_adhd_epilepsy.ml.run_ml_pipe:main"
eeg-analysis = "eeg_psychostimulant.analysis.design:main"
eeg-qc = "eeg_analysis_adhd_epilepsy.explore.eeg_qc:main"

[tool.setuptools]
packages = { find = { where = ["."], include = ["eeg_adhd_epilepsy*", "eeg_psychostimulant*"], exclude = ["tests*"] } }

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E203",  # whitespace before ':' (black compat)
    "E266",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
